--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
     text-transform: uppercase;
     font-size: 250%;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 ::-webkit-scrollbar-track{
@@ -28,9 +29,7 @@ body{
 	border-radius: 10px;
 }
 
-h1{
-    color: white;
-}
+
 body a {
     color: #999;
     text-decoration: none;
@@ -85,6 +84,8 @@ body a {
   nav h1{
     margin-right: auto;
     margin-top: 150px;
+    color: white;
+margin-left: 15px;
   }
   nav img{
     width: 350px;
@@ -98,12 +99,8 @@ body a {
     justify-content: center;
     margin-right: auto;
     color: white;
-margin-bottom: auto;
+    margin-top: auto;
   }
-  .message{
-    width: 100%;
-    height: 80vh;
-  }
-  form{
-    color: #fff;
-  }
+  
+
+  
