--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ margin-left: 15px;
     justify-content: center;
     margin-right: auto;
     color: white;
-    margin-top: auto;
+    margin-bottom: auto;
   }
   
 
